Fixed picture overlaping

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,5 +1,5 @@
 .hero{
-    height:100vh;
+    height:90vh;
     background: linear-gradient(180deg, #e1ffea22, #8ac44f 80%);
     display: flex;
 }
