--- a/src/components/Popular/Popular.css
+++ b/src/components/Popular/Popular.css
@@ -8,9 +8,11 @@
    width: 100%;
 
 
+
 }
 .popular h1{
-    color:#3e3b3a
+    color:#3e3b3a;
+     
 }
 .popular-item h1{
    color:black;
